@startuml
package data {

	abstract class "DataSetView (DSV)" as dsv
    class "StyleAsset" as sta

    package tabular {
        class "TableView" as tv
        class "TableDS" as tds
        class "PostgresTable" as pt
        class "ExternalTable" as et
        class "PostgresDB" as pdb
        class "TableField" as tf
        class "ViewField" as vf
        class "ModelSchema" as ms

        tds <|-- pt
        tds <|-- et

        tv "1-n" --* "1" pt

        pt "*" --* "1" ms
        pt "1" *-- "0..*" tf

        tv "1" *-- "1..n" vf
        vf "1..n" --* "1" tf

        ms "1..*" -- "1" pdb
    }

    package "raster"{
        class "RasterView" as rv
        class "RasterDS" as rds

        rv "1-n" --* "1" rds
    }

    dsv <|-- tv
    dsv <|-- rv

    dsv "1" -left- "*" sta
}
@enduml